Closed
Bug 1615421
Opened 1 year ago
Closed 11 months ago
Block WebRender for Intel driver 23.20.16.4973
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla75
People
(Reporter: aosmond, Assigned: aosmond)
References
Details
Attachments
(2 files)
47 bytes,
text/x-phabricator-request
|
Details | Review | |
1.63 KB,
text/plain
|
pascalc
:
approval-mozilla-beta+
|
Details |
No description provided.
Assignee | ||
Comment 1•1 year ago
|
||
See bug 1600496 for details.
Assignee | ||
Comment 2•1 year ago
|
||
Assignee | ||
Comment 3•1 year ago
|
||
Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
status-firefox73:
--- → wontfix
status-firefox74:
--- → affected
status-firefox75:
--- → affected
tracking-firefox74:
--- → +
tracking-firefox75:
--- → +
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a773ae1907f8 Block WebRender with broken Intel driver 23.20.16.4973. r=jrmuizel
Comment 5•11 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Comment 6•11 months ago
|
||
Andrew, is that something we should uplift to beta?
Flags: needinfo?(aosmond)
Assignee | ||
Comment 7•11 months ago
|
||
Comment on attachment 9126540 [details]
[beta] 0001-Bug-1615421-Block-WebRender-with-broken-Intel-driver.patch, v1
Beta/Release Uplift Approval Request
- User impact if declined: Experience crashes when playing videos if WebRender is enabled and has this particular driver
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Blocks a very specific driver version, not even a range. Worst case fewer users get WebRender than expected.
- String changes made/needed:
Flags: needinfo?(aosmond)
Attachment #9126540 -
Flags: approval-mozilla-beta?
Comment 8•11 months ago
|
||
Comment on attachment 9126540 [details]
[beta] 0001-Bug-1615421-Block-WebRender-with-broken-Intel-driver.patch, v1
Block bad driver for WR causing crashes, uplift approved for 74.0b6, thanks.
Attachment #9126540 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•11 months ago
|
||
bugherderuplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•