Bug 1615421 - Block WebRender with broken Intel driver 23.20.16.4973. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D62808