widget/windows/GfxInfo.cpp
@@ -1803,6 +1803,14 @@ const nsTArray<GfxDriverInfo>& GfxInfo::GetGfxDriverInfo() {
         V(21, 20, 16, 4590), "Intel driver >= 21.20.16.4590");
 #endif
 
+    // Bug 1615421 / 1607860 - Playing videos appear to crash with WebRender
+    // with this particular driver.
+    APPEND_TO_DRIVER_BLOCKLIST2(
+        OperatingSystem::Windows, DeviceFamily::IntelAll,
+        nsIGfxInfo::FEATURE_WEBRENDER,
+        nsIGfxInfo::FEATURE_BLOCKED_DRIVER_VERSION, DRIVER_EQUAL,
+        V(23, 20, 16, 4973), "Intel driver > 23.20.16.4973");
+
     ////////////////////////////////////
     // FEATURE_WEBRENDER - ALLOWLIST
 
